syntax="proto2";
package exec;

option cc_generic_services = true;

message Request {
	required string message = 1;
};

message Response {
	required string message = 1;
};

service EchoService {
      rpc ExecCommand(Request) returns (Response);
      rpc PostFile(Request) returns (Response);
      rpc GetFile(Request) returns (Response);
};
